--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -24,10 +24,10 @@
 
 @layer utilities {
   .border-sketch {
-    @apply relative left-[0.5em] before:content-visible before:-z-1 before:-left-[0.5em] before:-top-[0.1em] before:border-2 before:border-solid before:absolute before:border-r-transparent 
-    before:w-full before:h-[1em] before:rotate-2 before:opacity-70 before:rounded-[50%] before:py-[0.1em] before:px-[0.25em] before:border-inherit after:content-visible after:-z-1 after:-left-[0.5em]
-    after:top-[0.1em] after:py-[0.1em] after:px-[0.25em] after:border-inherit after:border-2 after:border-solid after:border-l-transparent after:border-t-transparent after:ansolute
-    after:w-full after:h-[1em] after:-rotate-1 after:opacity-70 after:rounded-[50%];
+    @apply relative before:content-visible before:-z-1 before:-left-[0.1em] before:top-[0.1em] before:border-[4px] before:border-solid before:absolute before:border-r-transparent 
+    before:w-full before:h-[1em] before:rotate-2 before:opacity-70 before:rounded-[50%] before:py-[0.5em] before:px-[0.25em] before:border-inherit after:content-visible after:-z-1 after:-left-[0.1em]
+    after:top-[0.3em] after:py-[0.5em] after:px-[0.25em] after:border-inherit after:border-[4px] after:border-solid after:border-l-transparent after:border-t-transparent after:absolute
+    after:w-full after:h-[1em] after:-rotate-2 after:opacity-70 after:rounded-[50%] before:animate-[border-sketch-anim_2000ms] after:animate-[border-sketch-anim_2000ms];
   }
 
   .p-page {
