--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -4,14 +4,14 @@
 
 @layer base {
   html {
-    @apply bg-background text-front font-poppins;
+    @apply bg-background font-poppins text-front;
   }
   body {
-    @apply p-0 m-0;
+    @apply m-0 p-0;
   }
 
   input {
-    @apply outline-none border-none;
+    @apply border-none outline-none;
   }
 }
 
@@ -21,17 +21,17 @@
   }
 
   .btn-2 {
-    @apply text-primary relative border-2 border-primary rounded-md before:content-visible before:absolute before:absolute-center before:-z-1 before:w-0 before:h-0 duration-300
-    before:rounded-[100%] before:bg-primary before:duration-inherit hover:before:w-full hover:before:h-full hover:before:scale-[101%] hover:before:rounded-none hover:text-back;
+    @apply before:absolute-center relative rounded-md border-2 border-primary text-primary duration-300 before:absolute before:-z-1 before:h-0 before:w-0 before:rounded-[100%]
+    before:bg-primary before:duration-inherit before:content-visible hover:text-back hover:before:h-full hover:before:w-full hover:before:scale-[101%] hover:before:rounded-none;
   }
 }
 
 @layer utilities {
   .border-sketch {
-    @apply relative before:content-visible before:-z-1 before:-left-[0.1em] before:top-[0.1em] before:border-[4px] before:border-solid before:absolute before:border-r-transparent 
-    before:w-full before:h-[1em] before:rotate-2 before:opacity-70 before:rounded-[50%] before:py-[0.5em] before:px-[0.25em] before:border-inherit after:content-visible after:-z-1 after:-left-[0.1em]
-    after:top-[0.3em] after:py-[0.5em] after:px-[0.25em] after:border-inherit after:border-[4px] after:border-solid after:border-l-transparent after:border-t-transparent after:absolute
-    after:w-full after:h-[1em] after:-rotate-2 after:opacity-70 after:rounded-[50%] before:animate-[border-sketch-anim_2000ms] after:animate-[border-sketch-anim_2000ms];
+    @apply relative before:absolute before:-left-[0.1em] before:top-[0.1em] before:-z-1 before:h-[1em] before:w-full before:rotate-2 before:animate-[border-sketch-anim_2000ms] 
+    before:rounded-[50%] before:border-[4px] before:border-solid before:border-inherit before:border-r-transparent before:px-[0.25em] before:py-[0.5em] before:opacity-70 before:content-visible after:absolute after:-left-[0.1em]
+    after:top-[0.3em] after:-z-1 after:h-[1em] after:w-full after:-rotate-2 after:animate-[border-sketch-anim_2000ms] after:rounded-[50%] after:border-[4px] after:border-solid
+    after:border-inherit after:border-l-transparent after:border-t-transparent after:px-[0.25em] after:py-[0.5em] after:opacity-70 after:content-visible;
   }
 
   .p-page {
@@ -39,6 +39,6 @@
   }
 
   .absolute-center {
-    @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
+    @apply absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2;
   }
 }
